# kaggle-amex

./: README.md  fetch_kaggle_data.py  pyproject.toml  train_lgbm_cpu.py  train_model_stacking.py  train_prepare_datasets.py  train_xgb_gpu.py
mlglance/: __init__.py  datasets.py  optuna_params.py  trainer.py  training_config.py  utils.py
notebooks/: 000_current_lgbm-with-optuna-for-tuning-on-c-gpu-lb-0-796.ipynb  amex-feature-ensemble.ipynb  xgb-lgbm-catboost-cnn-stacking.ipynb
